<resources>
    <string name="app_name">CombinePhrase</string>
    <string name="game_activity_name">GameSurface</string>
    <string name="addphrase_activity_name">AddPhrase</string> 
    <string name="phrase_input_activity_name">AddPhrase</string>    
    <string name="menu_settings">Settings</string>
        
    <string name="combinephrase">拼句子</string>
    <string name="choose_original">使用默认句子</string>
    <string name="choose_custom">使用自定义句子</string>
    <string name="choose_addphrase">管理用户字典</string>
    <string name="exit">退出程序</string>
    
    <string name="addphrase">添加句子</string>     
    <string name="addphrase_hint">添加句子到用户自定义字典</string> 
    <string name="add_to_user_db">提交</string>
    <string name="clear_user_db">清除</string>    
    <string name="back_to_main">返回</string>
    
    <string name="userDBPath">/sdcard/combinephrase</string>
    <string name="userDBFile">userDB</string>
    
    <string name="userDBClear">用户字典清除成功</string>
    <string name="sdNotReady">SD卡已移除</string>
    
    <string name="author_prompt">作者</string>
    <string name="version_prompt">版本</string>
    <string name="email_prompt">Email:</string>
    <string name="qq_prompt">QQ:</string>
    
    <string name="author">Karl Liu</string>
    <string name="version">1.0</string>
    <string name="email">37175519@qq.com</string>
    <string name="qq">37175519</string>
    
    
    <string name="keypad_title">francais lettre</string>
    <string name="a1">à</string>
    <string name="a2">â</string>
    <string name="c1">ç</string>
    <string name="e1">é</string>
    <string name="e2">è</string>
    
    <string name="e3">ê</string>
    <string name="e4">ë</string>
    <string name="i1">î</string>
    <string name="i2">ï</string>
    <string name="o1">ô</string>
    
    <string name="o2">œ</string>    
    <string name="u1">ù</string>
    <string name="u2">û</string> 
    <string name="A1">À</string>
    <string name="A2">Â</string>
    
    <string name="C1">Ç</string>
    <string name="E1">É</string>  
    <string name="E2">È</string>
    <string name="E3">Ê</string>    
    <string name="I1">Î</string>    
</resources>