<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/app_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/combinephrase"
        android:layout_marginBottom="30dp" />
    
    <Button
        android:id="@+id/btn_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_textview"
        android:layout_centerHorizontal ="true"
        android:layout_marginBottom="30dp"
        android:text="@string/choose_original" />
    
    <Button
        android:id="@+id/btn_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_original"
        android:layout_centerHorizontal ="true"
        android:layout_marginBottom="30dp"
        android:text="@string/choose_custom" />

    <Button
        android:id="@+id/btn_userphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_custom"
        android:layout_centerHorizontal ="true"
        android:layout_marginBottom="30dp"
        android:text="@string/choose_addphrase" />
    
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_userphrase"
        android:layout_centerHorizontal ="true"
        android:layout_marginBottom="30dp"
        android:text="@string/exit" />    
</RelativeLayout>